# CMPE275-MINI1

./: .gitignore  CMakeLists.txt  README.md  benchmark_results.txt  benchmark_results_with_string.txt  download_dataset.sh  presentation.pptx  report.md  run_benchmarks.sh
data/: generate_sample.py
include/: Benchmark.hpp  BenchmarkRunner.hpp  CSVParser.hpp  DataStore.hpp  IDataStore.hpp  ParallelDataStore.hpp  Record311.hpp  VectorStore.hpp
python/: plot_benchmarks.py  plot_static.py
report/: report.md  report_masters.md
src/phase1/: CMakeLists.txt  main.cpp
src/phase2/: CMakeLists.txt  main.cpp
src/phase3/: CMakeLists.txt  main.cpp
